fix: Overlap of footer

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,9 +1,9 @@
 main {
-    height: calc(100vh - 138.98px);
+    min-height: calc(100vh - 138.98px);
 }
 
 @media(min-width: 768px) {
     main {
-        height: calc(100vh - 154.98px);
+        min-height: calc(100vh - 154.98px);
     }
 }
